face recognition - client side
implement using react

--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "smart-brain",
-  "homepage": "https://yudit12.github.io/face-recognition",
+  "name": "my_websit_client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "clarifai": "^2.9.1",
-    "gh-pages": "^2.2.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "email-validator": "^2.0.4",
+    "face-api.js": "^0.22.2",
+    "formik": "^2.1.4",
+    "is-image-url": "^1.1.8",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-particles-js": "^2.7.1",
+    "react-player": "^1.15.3",
     "react-scripts": "3.4.0",
     "react-tilt": "^0.1.4",
-    "tachyons": "^4.11.1"
+    "react-webcam": "^5.2.0",
+    "save": "^2.4.0",
+    "tachyons": "^4.12.0",
+    "yup": "^0.28.5"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -27,6 +31,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://127.0.0.1:5000/",
   "browserslist": {
     "production": [
       ">0.2%",
