--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://yudit12.github.io/face-recognition-client",
   "name": "my_websit_client",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "email-validator": "^2.0.4",
     "face-api.js": "^0.22.2",
     "formik": "^2.1.4",
+    "gh-pages": "^3.1.0",
     "is-image-url": "^1.1.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -23,6 +25,8 @@
     "yup": "^0.28.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
